[package]
name = "sentry"
version = "0.1.10"
authors = ["Alexis Agahi <aagahi@prefetch.com>"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/getsentry/rust-sentry"
homepage = "https://github.com/getsentry/rust-sentry"
documentation = "https://github.com/getsentry/rust-sentry"
description = "Sentry (getsentry.com) client for Rust"

[dependencies]
backtrace = "0.3"
hyper = { "0.11" }
hyper-tls = { "0.1" }
time = "0.1"
chrono = "0.3"
url = "1"
log = "0.3"
tokio-core = "0.1"
futures = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
maplit = "0.1"
error-chain = "0.10.0"
